完成用户提交自身信息，获取自身信息，创建队伍功能
